css/flexcontainers.css
#flex-main {
  display: flex;
  flex-direction: column;
  padding: 1rem;
  flex-wrap: wrap;
  gap: 20px;
  font-size: 1.5em;
}

#flex-container-right {
  flex-direction: row-reverse;
  display: flex;
  gap: 1rem;
}

#flex-container-left {
  flex-direction: row;
  display: flex;
  gap: 1rem;
}

#flex-image {
  max-width: 300px;
}

#flex-mobile {
  padding: 1rem;
  flex-wrap: wrap;
}

#flex-select {
  white-space: nowrap;
  padding: 0.1rem;
  background-color: rgb(29, 0, 34);
}

